Kubernetes-6/task-2/manifests/deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-app
  namespace: default
  labels:
    app: https-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-app
  template:
    metadata:
      labels:
        app: https-app
    spec:
      containers:
      - name: nginx-https
        image: nginx:1.25
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: tls-secret
          mountPath: /etc/nginx/ssl
          readOnly: true
        - name: nginx-https-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx-https.conf
        # Используем существующий ConfigMap для контента
        - name: web-content
          mountPath: /usr/share/nginx/html
          readOnly: true
      volumes:
      - name: tls-secret
        secret:
          secretName: tls-secret
      - name: nginx-https-config
        configMap:
          name: nginx-https-config
      - name: web-content
        configMap:
          name: web-content
          items:
          - key: index.html
            path: index.html

---
apiVersion: v1
kind: Service
metadata:
  name: https-service
  namespace: default
spec:
  selector:
    app: https-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: ClusterIP
